--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,71 @@
-#root {
-  max-width: 1280px;
+/*--------------------------------------------------------------
+ # About Section 
+--------------------------------------------------------------*/
+.about-section {
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  background-color: aliceblue;
+  color: #272829;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.section-title p,
+.container p {
+  line-height: 25px;
+  font-weight: 400;
+  font-size: 18px;
+  margin-bottom: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section-title h1 {
+  font-size: 40px;
+  font-weight: 700;
+  text-decoration: underline 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: start;
+  padding: 20px;
 }
 
-.card {
-  padding: 2em;
+.container img {
+  width: 100%;
+  border: solid 1px #272829;
+  border-radius: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.container h2 {
+  font-weight: 700;
+  font-size: 24px;
 }
+
+.container ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 100px;
+  list-style: none;
+  padding: 0;
+  gap: 20px;
+}
+
+.container ul li {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  width: 100%;
+}
+
+.container span {
+  font-weight: 700;
+  margin-right: 10px;
+}
+
